examples/invalid/61_alias_higher_kind_expected.lane
module Examples.Invalid.AliasHigherKindExpected

type Bad : [Type] -> Type = Int
